# FFmpegCompileScript

./: .gitignore  .gitmodules  README.md  configureOptions.sh
androidBuild/: androidBuild.sh
androidBuild/FFmpegTest/: settings.gradle
androidBuild/FFmpegTest/app/: build.gradle
androidBuild/FFmpegTest/app/src/main/: AndroidManifest.xml
androidBuild/FFmpegTest/app/src/main/cpp/: CMakeLists.txt  FFmpegTest.cpp
androidBuild/FFmpegTest/gradle/wrapper/: gradle-wrapper.properties
androidBuild/libFFmpeg/lib/pkgconfig/: libpostproc.pc
iOSBuild/: iosBuild.sh
iOSBuild/FFMpegTest/FFMpegTest/: SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.mm  main.m
iOSBuild/FFMpegTest/FFMpegTest.xcodeproj/: project.pbxproj
iOSBuild/FFMpegTest/FFMpegTest.xcodeproj/project.xcworkspace/xcuserdata/ragnarokstack.xcuserdatad/: UserInterfaceState.xcuserstate
iOSBuild/FFMpegTest/FFMpegTest.xcodeproj/xcuserdata/ragnarokstack.xcuserdatad/xcschemes/: xcschememanagement.plist
iOSBuild/FFMpegTest/FFMpegTest/FFMpegTest/FFMpegTest/: AppDelegate.h
iOSBuild/FFMpegTest/FFMpegTestTests/: FFMpegTestTests.m
iOSBuild/FFMpegTest/FFMpegTestUITests/: FFMpegTestUITests.m
iOSBuild/FFmpeg-iOS-build-script/: build-ffmpeg.sh
iOSBuild/scratch-x264/arm64/: .depend  config.h  config.mak  x264.pc
iOSBuild/scratch-x264/x86_64/: config.mak  x264.pc
iOSBuild/scratch/x86_64/: config.asm  config.h
macOSBuild/: .depend  macOSBuild.sh
macOSBuild/libFFmpeg/lib/pkgconfig/: libavfilter.pc  libavformat.pc  libavutil.pc  libswscale.pc
(+12 files in other folders)
